[gd_scene load_steps=3 format=3 uid="uid://brtcei76t3lyl"]

[ext_resource type="Script" path="res://src/data/resources/Deployment/Units/BattlefieldGeneratorCrew.gd" id="1_d7n8c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fq138"]

[node name="BattlefieldGeneratorCrew" type="Node2D"]
script = ExtResource("1_d7n8c")

[node name="Character" type="CharacterBody2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Character"]
shape = SubResource("RectangleShape2D_fq138")

[node name="Sprite" type="Sprite2D" parent="Character/Collision"]

[node name="WeaponSystem" type="Node" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -30.0
offset_right = 20.0
offset_bottom = -26.0
value = 100.0
show_percentage = false

[node name="HealthSystem" type="Node" parent="."]

[node name="StatusEffects" type="Node" parent="."]
