extends Node2D

## BattlefieldGeneratorCrew
## Represents a crew that generates battlefield elements
## Includes health system, weapon system, and character components

# Signal definitions
signal health_changed(current_health, max_health)
signal weapon_fired(weapon_type, target)
signal status_effect_applied(effect_type, duration)

# Constants
const MAX_HEALTH := 100.0
const MOVE_SPEED := 150.0

# Health tracking
var _current_health: float = MAX_HEALTH

# Core initialization
func _ready() -> void:
	# Initialize systems
	_setup_health_system()
	_setup_weapon_system()
	_setup_status_effects()
	
	# Update UI elements
	_update_health_bar()

# Health system setup
func _setup_health_system() -> void:
	var health_system = get_node_or_null("HealthSystem")
	if health_system:
		# Health system initialization logic
		pass

# Weapon system setup
func _setup_weapon_system() -> void:
	var weapon_system = get_node_or_null("WeaponSystem")
	if weapon_system:
		# Weapon system initialization logic
		pass

# Status effects setup
func _setup_status_effects() -> void:
	var status_effects = get_node_or_null("StatusEffects")
	if status_effects:
		# Status effects initialization logic
		pass

# Update health bar UI
func _update_health_bar() -> void:
	var health_bar = get_node_or_null("HealthBar")
	if health_bar and health_bar is ProgressBar:
		health_bar.value = _current_health

# Take damage method
func take_damage(amount: float) -> void:
	_current_health = max(0.0, _current_health - amount)
	_update_health_bar()
	emit_signal("health_changed", _current_health, MAX_HEALTH)
	
	if _current_health <= 0:
		_handle_defeat()

# Heal method
func heal(amount: float) -> void:
	_current_health = min(MAX_HEALTH, _current_health + amount)
	_update_health_bar()
	emit_signal("health_changed", _current_health, MAX_HEALTH)

# Handle defeat
func _handle_defeat() -> void:
	# Logic for when health reaches zero
	pass

# Fire weapon
func fire_weapon(target_position: Vector2) -> void:
	var weapon_system = get_node_or_null("WeaponSystem")
	if weapon_system:
		# Weapon firing logic
		emit_signal("weapon_fired", "standard", target_position)

# Apply status effect
func apply_status_effect(effect_type: String, duration: float) -> void:
	var status_effects = get_node_or_null("StatusEffects")
	if status_effects:
		# Apply status effect logic
		emit_signal("status_effect_applied", effect_type, duration)

# Get current health
func get_current_health() -> float:
	return _current_health

# Get max health
func get_max_health() -> float:
	return MAX_HEALTH